--- a/Example/AMTableWithStickyView/Main.storyboard
+++ b/Example/AMTableWithStickyView/Main.storyboard
@@ -32,10 +32,16 @@
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
+                        <outlet property="searchView" destination="CMD-ZH-ptM" id="F2b-mf-lKo"/>
                         <outlet property="switchButton" destination="wsC-9I-Wi2" id="bDb-JO-j3G"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <searchBar contentMode="redraw" id="CMD-ZH-ptM">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <textInputTraits key="textInputTraits"/>
+                </searchBar>
             </objects>
             <point key="canvasLocation" x="660" y="406"/>
         </scene>
